--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -208,12 +208,23 @@
             </span>
             <small class="w-ful inline-block " *ngIf="f.recurrentDays.hasError('required') && f.recurrentDays.touched"
                 id="state-help" class="p-error">Please select recurrent days</small>
+
+                <span class="w-full mb-1 block mt-8">
+
+                    <span class="block w-full mb-1">Routes stops </span>
+    
+                    <p-multiSelect [options]="times" optionValue="title" placeholder="Select route's stops"
+                        formControlName="stops" [options]="locations"
+                        [ngClass]="{ 'ng-invalid ng-dirty': submitted && f.stops.errors }"
+                        styleClass="border w-full p-2 rounded" [style]="{width: '100%'}" optionLabel="title"></p-multiSelect>
+                </span>
+
             <span class="w-full mb-1 block mt-8">
 
                 <span class="block w-full mb-1">Routes trip times </span>
 
                 <p-multiSelect [options]="times" optionValue="title" placeholder="Select route's possible times"
-                    formControlName="times"
+                    formControlName="times" 
                     [ngClass]="{ 'ng-invalid ng-dirty': submitted && f.times.errors }"
                     styleClass="border w-full p-2 rounded" [style]="{width: '100%'}" optionLabel="title"></p-multiSelect>
             </span>
