--- a/src/app/routes/routes.component.html
+++ b/src/app/routes/routes.component.html
@@ -77,7 +77,7 @@
                             </div>
                         </th>
                         <th pSortableColumn="title" style="width:10%">Title <p-sortIcon field="title"></p-sortIcon></th>
-                        <th pSortableColumn="title" style="width:15%">Price <p-sortIcon field="title"></p-sortIcon></th>
+                        <!-- <th pSortableColumn="title" style="width:15%">Price <p-sortIcon field="title"></p-sortIcon></th> -->
                         <th pSortableColumn="origin" style="width:10%">Origin <p-sortIcon field="origin"></p-sortIcon>
                         </th>
                         <th pSortableColumn="destination" style="width:10%">Destination <p-sortIcon
@@ -107,8 +107,8 @@
                             </div>
                         </td>
                         <td class="' py-2">{{route.title}}</td>
-                        <td class="' py-2">N:{{route.price}}, P: {{route.premiumPrice}},D
-                            {{route.discountedPrice}}</td>
+                        <!-- <td class="' py-2">N:{{route.price}}, P: {{route.premiumPrice}},D
+                            {{route.discountedPrice}}</td> -->
                         <td class="' py-2">{{route.origin}}</td>
                         <td class="' py-2">{{route.destination}}</td>
                         <td class="' py-2">{{route.bus.title}}</td>
