--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -20,3 +20,8 @@
    </div>
 
  </aside>
+ <div class="w-full pt-10 px-4 sm:px-6 md:px-8 lg:ps-72">
+ 
+     <router-outlet></router-outlet>
+ 
+ </div>
