--- a/src/app/abookings/abookings.component.html
+++ b/src/app/abookings/abookings.component.html
@@ -1,6 +1,5 @@
 <div class="px-4 mx-auto  lg:px-12">
-    <h4 class="mb-4 text-primary-600 text-xl font-semibold"> Bookings</h4>
-
+    <h4 class="mb-4 text-primary-600 text-xl font-semibold">All Changed Bookings</h4>
     <div class="relative overflow-hidden bg-white shadow-md border  dark:bg-gray-800 sm:rounded-lg p-1">
         <div
             class="flex flex-col px-4 py-3  lg:flex-row lg:items-center border-b border-gray-300  lg:justify-between lg:space-y-0 lg:space-x-4">
@@ -40,7 +39,7 @@
                     </svg>
                     Export
                 </button>
-                <button state="button" (click)="showDialog(); submitType ='Add'"
+                <!-- <button state="button" (click)="showDialog(); submitType ='Add'"
                     class="flex items-center justify-center px-4 py-2 text-sm font-medium text-white rounded-lg bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 dark:bg-primary-600 dark:hover:bg-primary-700 focus:outline-none dark:focus:ring-primary-800">
                     <svg class="h-3.5 w-3.5 mr-2" fill="currentColor" viewbox="0 0 20 20"
                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
@@ -48,7 +47,7 @@
                             d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" />
                     </svg>
                     Add new booking
-                </button>
+                </button> -->
 
             </div>
         </div>
