--- a/src/app/withdrawals/withdrawals.component.html
+++ b/src/app/withdrawals/withdrawals.component.html
@@ -100,11 +100,11 @@
                                     <ul class="py-1 text-sm text-gray-700 dark:text-gray-200"
                                         aria-labelledby="apple-imac-27-dropdown-button">
                                         <li>
-                                            <a href="javascript:void(0)" (click)="showWithdrawalDialog(withdrawal)"
+                                            <a href="javascript:void(0)" (click)="approvalWithdrawal(withdrawal)"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Approve Withdrawal</a>
                                         </li>
                                         <li>
-                                            <a href="javascript:void(0)" (click)="showWithdrawalDialog(withdrawal)"
+                                            <a href="javascript:void(0)" (click)="rejectWithdrawal(withdrawal)"
                                                 class="block py-2 px-4 hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white">Reject Withdrawal</a>
                                         </li>
                                     
