--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -15,7 +15,11 @@
                    <span class="ml-3">{{item.title}}</span>
                </a>
            </li>
-    
+           <li >
+            <a href="javascript:void(0)" (click)="auth.logout()"     class="flex items-center p-2 text-base font-normal text-gray-900 rounded-lg transition duration-75 hover:bg-primary-300 dark:hover:bg-gray-700 dark:text-white group">
+                <span class="ml-3">Logout</span>
+            </a>
+        </li>
        </ul>
    </div>
 
