--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -654,7 +654,7 @@
                     <td>&nbsp;</td>
                 </tr>
                 <tr class="heading">
-                    <td>TRIP INFROMATION</td>
+                    <td>TRIP INFORMATION</td>
                     <td>&nbsp;</td>
                 </tr>
                 <tr class="border-b border-gray-100">
