--- a/src/app/bookings/bookings.component.html
+++ b/src/app/bookings/bookings.component.html
@@ -712,49 +712,59 @@
                 </tr>
                 <tr class="">
                     <td colspan="2">
-                        <p class="text-xs pt-0.5">1. Bus departs at scheduled time, but in cases where an emergency or
-                            unforeseen circumstances
-                            occurs (safety and security incident), please note that we are at liberty to alter
-                            the departure time.
+                        <p class="text-xs pt-0.5">1. The bus departs promptly as scheduled provided it is fully booked
+                            else the bus may be delayed to wait for more passengers to enable recovery of high fuel
+                            costs. Please endeavor to be at the bus station at least 15 minutes before your bus
+                            departure time. Once the bus departs, it cannot be stopped for security reasons and to avoid
+                            causing inconveniences to passengers already onboard.
+
                         </p>
                         <p class="text-xs pt-0.5">
-                            2. Travel is non-stop from departure bus station to arrival bus station. Stoppage only in
-                            emergency.</p>
+                            2. The bus stops at only the designated bus stations for security reasons.
+                        </p>
                         <p class="text-xs pt-0.5">
-                            3. Buses can also leave only when full; especially for walk-in buses.</p>
+                            3. When you miss a bus (no show), we will issue you a new ticket at a discounted rate of
+                            ₦6,000. Fees to reschedule your ticket. If you cancel more than 24 hours to departure, you
+                            will pay ₦5,000 for reschedule.
+                        </p>
                         <p class="text-xs pt-0.5">
-                            4. Bus stops at only the designated bus stations for security reasons.</p>
+                            4. A rescheduled ticket cannot be rescheduled.
+                        </p>
                         <p class="text-xs pt-0.5">
-                            5. When you miss a bus (no show), we will issue you a new ticket at a discount rate of
-                            N4,000.
-                            Fees to
-                            reschedule your ticket before your bus departs: with more than 24hrs to departure N5000;
-                            with
-                            less than 24hrs to departure ₦4,000.</p>
+
+                            5. You are entitled to a total luggage allowance of 10kg. Any luggage above 10kg will be
+                            charged at N100 per kg to a maximum of 25kg per bag subject to availability of boot space.
+                            If you choose to use our cargo service the luggage will be charged at N50 per kg.
+                            Oversized/irregular luggage can only be carried with the cargo service.
+                        </p>
                         <p class="text-xs pt-0.5 pb-[5px]">
-                            6. There is no refund after ticket is booked. See full <a href="#"> terms and
-                                conditions
-                            </a> of carriage on our website.
-                        <p class="text-xs pt-0.5">
-                            7. Seats booked for luggage must be at the full adult fare for the trip. Fragile items
-                            such as
-                            electronics, laptops and other valuable items are not to be placed in the checke
+                            6. Seats booked for Luggage must be at the full adult fare for the trip. Fragile items such
+                            as electronics, laptops and other valuable items are not to be placed in the checked-in
                             luggage but carried as hand luggage.
+
+                        <p class="text-xs pt-0.5">
+                            7. There is no refund after your ticket is booked. See full terms and conditions of
+                            carriage on our website.
+
                         </p>
                         <p class="text-xs pt-0.5">
-                            8. All passengers will be allowed a total of 10kg free luggage allowance.
-                            (i)If the luggage weighs 10kg or less and the passenger is able to fit it under
-                            their seat or sit with it without inconveniencing passengers seated next to them, the
-                            luggage will be carried for free.
-                            (ii)If the luggage weighs above 10kg, a fee of N100 per kg will be charged
-                            for all kgs above 10kg to a maximum of 25kg per bag subject to availability of boot space.
+
+                            8. ⁠We do not transport pets, including dogs, cats or other animals.
+                        </p>
+
+                        <p class="text-xs pt-0.5">
+
+                            9. ⁠All information captured here are subject to terms and conditions.
+
                         </p>
                         <h4 class="py-1">LIABILITY POLICY</h4>
                         <p class="text-xs pt-0.5">
-                            Except as provided in these Conditions, we shall not be liable to you or any third party
-                            for any loss, damage, liability, cost or expense suffered by you or any third party
-                            as a result of any alteration, cancellation or withdrawal of any Service by us,
-                            or any delay to any Service, or termination of any Service.
+
+                            Except as provided in these conditions, we shall not be liable to you or any third party for
+                            any loss, damage, liability, cost or expense suffered by you or any third party as a result
+                            of any alternation, cancellation or withdrawal of any service by us, or any delay to any
+                            service, or termination of any service.
+
                         </p>
                         <p class="text-xs pt-0.5">
                             Safe Travels</p>
